--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 Flask==3.0.2
-torch==2.5.0
 gunicorn==21.2.0
+torch==2.2.2
 whisper==1.1.10
 pydub==0.25.1
 SpeechRecognition==3.10.0
 language_tool_python==2.7.1
 scikit-learn==1.3.2
 joblib==1.4.2
-
-
-
+ffmpeg-python==0.2.0
